--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,29 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
+@layer components {
+  .hover-effects {
+    @apply cursor-pointer hover:bg-gray-100 rounded-full w-[52px] xl:w-auto h-[52px] xl:h-auto xl:p-3;
   }
 }
